# rembg-rs

./: Cargo.toml
src/: compress_png.rs  error.rs  manager.rs  rembg.rs
