[package]
name = "rembg-rs"
version = "0.1.4"
edition = "2024"
authors = ["WarRaft"]
description = "A Rust library for removing backgrounds from images using neural networks"
license = "MIT"
repository = "https://github.com/WarRaft/rembg-rs"
keywords = ["image", "background-removal", "neural-network", "onnx", "computer-vision"]
categories = ["multimedia::images", "science"]

[lib]
name = "rembg_rs"
path = "src/lib.rs"

[[bin]]
name = "rembg-rs"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
# Image processing
image = { version = "0.25.9", features = ["png", "jpeg", "webp"] }

# ONNX Runtime for neural network inference
# For musl targets (Linux static builds), use load-dynamic feature
# This requires libonnxruntime.so to be installed on the target system
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }

# Tensor operations (must match ort's ndarray version - 0.15 for ort 1.16)
ndarray = "0.17.1"

# Command-line argument parsing (optional, only for CLI)
clap = { version = "4.4", features = ["derive"], optional = true }

derive_builder = "0.20.2"
imageproc = "0.25.0"
anyhow = "1.0.100"
oxipng = "10.0.0"
imagequant = "4.4.1"
png = "0.18.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true